# parser

./: Cargo.toml  README.md
examples/: lammps_bonds.rs  lammps_bonds_new.rs
src/: adhoc.rs  combinators.rs  core.rs  grep.rs  grep_bin.rs  lib.rs  new.rs  nom_parser.rs  old.rs  parser.rs  parsers.rs  partition.rs  reader.rs  view.rs
src/grep/: grep_bin.rs  grep_lib.rs  internal.rs
tests/: lammps_trj.rs  xyz.rs
tests/files/: lammps-reaxff.bonds  lammps-test.dump
