# cargo

# [[file:~/Workspace/Programming/gchemol-rs/parser/parser.note::*cargo][cargo:1]]
[package]
name = "gchemol-parser"
version = "0.2.1"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Text parsing made simple"
homepage = "https://github.com/gchemol/parser"
repository = "https://github.com/gchemol/parser"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = ["bin/*", "docs/*", "ltxpng/*", "data/*"]

[dependencies]
nom = "5.1"
gut = { version="0.1.1" , package="gchemol-gut" }

[dev-dependencies]
structopt = "0.3"

[features]
adhoc = []
# cargo:1 ends here
