# [[file:parser.note::f302d61a][f302d61a]]
[package]
name = "gchemol-parser"
version = "0.3.2"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Text parsing made simple"
homepage = "https://github.com/gchemol/parser"
repository = "https://github.com/gchemol/parser"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = ["bin/*", "docs/*", "ltxpng/*", "data/*"]

[dependencies]
nom = "7.1"
gut = { version="0.4" , package="gchemol-gut" }
grep = "0.2"
ropey = "1.3"
regex = "1.5"

[dev-dependencies]
clap = { version = "4", features = ["derive", "env"] }

[features]
adhoc = []
# f302d61a ends here
